Changes on html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="dashboard">
         <div class="dashboard-card main">
           <div class="dashboard-card-content">
-            <img src="images/B.jpg" alt="" width="150" class="img-circle">
+            <img src="images/B.jpg" alt="" width="100" class="img-circle">
             <h2>Vinícius Curti</h2>
             <p id = "first-child">Former auditor, passionate investor, soccer fan and a little bit more.</p>
           </div>
@@ -50,9 +50,9 @@
           <div class="dashboard-card-content">
             <h3>About Me</h3>
             <p class="text-justify">
-              On my way to become a Developer on Ruby.👨🏻‍💻
+              Ruby Developer.👨🏻‍💻
               <br>
-              <strong>Contact</strong> me on my linkedin, always willing to colaborate!
+              <strong>Contact</strong> me on my <a href ='https://www.linkedin.com/in/viniciuscurti/' target ="_blank">linkedin</a> , always willing to colaborate!
             </p>
           </div>
         </div>
